gl31-master/src/test/deca/context/invalid/complet/bad_cast3.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 11: Erreur, conversion boolean en int impossible
//
// Historique:
//    cree le 24/01/2021
{
    boolean b;
    int a = (int)(b);
}